// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`decorateElements: hoists styles from shadow DOM 1`] = `
{
  "content": 
"<nested-element>
    <template shadowrootmode="open" shadowrootdelegatesfocus shadowrootclonable="true">
        <style>
            .cls_2p8uqox{font-weight:bold;}
        </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
</nested-element>"
,
  "stylesheets": [],
}
`;

exports[`decorateElements: applies host styles via spread 1`] = `
{
  "content": 
"<style>
    .cls_dqiix{display:flex;}.cls_13vh1nn{flex-direction:column;}
</style>
<nested-element class="nestedElement cls_dqiix cls_13vh1nn">
    <template shadowrootmode="open" shadowrootdelegatesfocus shadowrootclonable="true">
        <style>
            .cls_2p8uqox{font-weight:bold;}
        </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
</nested-element>"
,
  "stylesheets": [
    ".cls_dqiix{display:flex;}",
    ".cls_13vh1nn{flex-direction:column;}",
  ],
}
`;

exports[`decorateElements: supports styled slotted children 1`] = `
{
  "content": 
"<style>
    .cls_1v0nksu{color:rebeccapurple;}
</style>
<nested-element class="slottedParagraph cls_1v0nksu">
    <template shadowrootmode="open" shadowrootdelegatesfocus shadowrootclonable="true">
        <style>
            .cls_2p8uqox{font-weight:bold;}
        </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
    <p slot="nested">slotted paragraph</p>
</nested-element>"
,
  "stylesheets": [
    ".cls_1v0nksu{color:rebeccapurple;}",
  ],
}
`;

exports[`decorateElements: supports nested declarative shadow DOM 1`] = `
{
  "content": 
"<top-element>
    <template shadowrootmode="open" shadowrootdelegatesfocus shadowrootclonable="true">
        <style>
            .cls_1v0nksu{color:rebeccapurple;}
        </style>
        <nested-element class="slottedParagraph cls_1v0nksu">
            <template shadowrootmode="open" shadowrootdelegatesfocus shadowrootclonable="true">
                <style>
                    .cls_2p8uqox{font-weight:bold;}
                </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-element>
    </template>
</top-element>"
,
  "stylesheets": [],
}
`;

exports[`decorateElements: nested DSD with host styles 1`] = `
{
  "content": 
"<style>
    .cls_qt6ejx{display:block;}
</style>
<top-element class="topElement cls_qt6ejx">
    <template shadowrootmode="open" shadowrootdelegatesfocus shadowrootclonable="true">
        <style>
            .cls_1v0nksu{color:rebeccapurple;}
        </style>
        <nested-element class="slottedParagraph cls_1v0nksu">
            <template shadowrootmode="open" shadowrootdelegatesfocus shadowrootclonable="true">
                <style>
                    .cls_2p8uqox{font-weight:bold;}
                </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-element>
    </template>
</top-element>"
,
  "stylesheets": [
    ".cls_qt6ejx{display:block;}",
  ],
}
`;

exports[`decorateElements: nested DSD with host styles and light DOM child 1`] = `
{
  "content": 
"<style>
    .cls_2h7uhvs{width:100%;}.cls_16johir{aspect-ratio:16 / 9;}.cls_qt6ejx{display:block;}
</style>
<top-element class="topElement cls_qt6ejx">
    <template shadowrootmode="open" shadowrootdelegatesfocus shadowrootclonable="true">
        <style>
            .cls_1v0nksu{color:rebeccapurple;}
        </style>
        <nested-element class="slottedParagraph cls_1v0nksu">
            <template shadowrootmode="open" shadowrootdelegatesfocus shadowrootclonable="true">
                <style>
                    .cls_2p8uqox{font-weight:bold;}
                </style><span class="nestedLabel cls_2p8uqox">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-element>
    </template>
    <img class="image cls_2h7uhvs cls_16johir" />
</top-element>"
,
  "stylesheets": [
    ".cls_2h7uhvs{width:100%;}",
    ".cls_16johir{aspect-ratio:16 / 9;}",
    ".cls_qt6ejx{display:block;}",
  ],
}
`;
